--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -6,12 +6,21 @@
 This page will be added to as development progresses.
 
 == Project Rename
-Any occurrences of `isis` within source code, including configuration resources, 
+Any occurrences of `isis` within source code, including configuration resources,
 have been replaced with `causeway` while keeping variants:
 
 * lower-case `isis` -> `causeway`
 * upper-case `ISIS` -> `CAUSEWAY`
 * or capital case `Isis` -> `Causeway`
+
+== XSDs
+
+The namespace and location of XSDs has changed:
+
+* from: `http://isis.apache.org/...`
+* to `https://causewaY.apache.org/...`
+
+Note that the scheme has changed also, from `http` to `https`.
 
 == Configuration
 
@@ -32,7 +41,7 @@ The following changed:
 | causeway.viewer.*wicket*.application.menubars-layout-*xml*
 | causeway.viewer.*common*.application.menubars-layout-*file*
 
-| causeway.viewer.*wicket*.application 
+| causeway.viewer.*wicket*.application
 | causeway.viewer.*common*.application
 
 | causeway.viewer.*wicket*.credit
@@ -50,7 +59,7 @@ The following changed:
 | previously
 | new
 
-| 
+|
 `o.a.c.v.restfulobjects.jaxrsresteasy4.CausewayModuleViewerRestfulObjectsJaxrsResteasy4` from
 [source,xml]
 ----
@@ -58,7 +67,7 @@ The following changed:
 <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy4</artifactId>
 ----
 |
-`o.a.c.v.restfulobjects.jaxrsresteasy.CausewayModuleViewerRestfulObjectsJaxrsResteasy` from 
+`o.a.c.v.restfulobjects.jaxrsresteasy.CausewayModuleViewerRestfulObjectsJaxrsResteasy` from
 [source,xml]
 ----
 <groupId>org.apache.causeway.viewer</groupId>
@@ -76,14 +85,14 @@ The following changed:
 | previously
 | new
 
-| `ViewModel` implementations were required to have at least a _public_ single argument constructor, 
+| `ViewModel` implementations were required to have at least a _public_ single argument constructor,
 taking a `String` argument for the `ViewModel's` memento.
-| `ViewModel` implementations now allow *any* _public_ constructor signature, 
+| `ViewModel` implementations now allow *any* _public_ constructor signature,
 where arguments are auto-resolved by the `ServiceRegistry`.
 
 `String` arguments still get the `ViewModel's` memento passed in.
 
-If the `ViewModel` has multiple _public_ constructors, it picks (the) one, 
-that has an `@Inject` or `@Autowired` annotation.  
+If the `ViewModel` has multiple _public_ constructors, it picks (the) one,
+that has an `@Inject` or `@Autowired` annotation.
 
 |===
