--- a/antora/components/userguide/modules/fun/pages/ui/object-layout.adoc
+++ b/antora/components/userguide/modules/fun/pages/ui/object-layout.adoc
@@ -65,12 +65,12 @@ There are two: one for the grid classes, and one for the common component classe
 	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <bs3:grid
-  xsi:schemaLocation="http://causeway.apache.org/applib/layout/component
-                      http://causeway.apache.org/applib/layout/component/component.xsd
-                      http://causeway.apache.org/applib/layout/grid/bootstrap3
-                      http://causeway.apache.org/applib/layout/grid/bootstrap3/bootstrap3.xsd"
-  xmlns:bs3="http://causeway.apache.org/applib/layout/grid/bootstrap3"
-  xmlns:c="http://causeway.apache.org/applib/layout/component"
+  xsi:schemaLocation="https://causeway.apache.org/applib/layout/component
+                      https://causeway.apache.org/applib/layout/component/component.xsd
+                      https://causeway.apache.org/applib/layout/grid/bootstrap3
+                      https://causeway.apache.org/applib/layout/grid/bootstrap3/bootstrap3.xsd"
+  xmlns:bs3="https://causeway.apache.org/applib/layout/grid/bootstrap3"
+  xmlns:c="https://causeway.apache.org/applib/layout/component"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     ...
 </bs3:grid>
