--- a/viewers/restfulobjects/adoc/modules/ROOT/pages/layout-resources.adoc
+++ b/viewers/restfulobjects/adoc/modules/ROOT/pages/layout-resources.adoc
@@ -18,9 +18,9 @@ For example, the xref:docs:starters:helloworld.adoc[Hello World starter app] has
 ----
 <mb3:menuBars
     xsi:schemaLocation="..."
-    xmlns:cpt="http://causeway.apache.org/applib/layout/component"
-    xmlns:lnk="http://causeway.apache.org/applib/layout/links"
-    xmlns:mb3="http://causeway.apache.org/applib/layout/menubars/bootstrap3"
+    xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+    xmlns:lnk="https://causeway.apache.org/applib/layout/links"
+    xmlns:mb3="https://causeway.apache.org/applib/layout/menubars/bootstrap3"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <mb3:primary>
         <mb3:menu>
@@ -175,9 +175,9 @@ For example, the layout for a "HelloWorldObject" instance in the hello world sta
 	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
-<bs3:grid xmlns:cpt="http://causeway.apache.org/applib/layout/component"
-          xmlns:lnk="http://causeway.apache.org/applib/layout/links"
-          xmlns:bs3="http://causeway.apache.org/applib/layout/grid/bootstrap3">
+<bs3:grid xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+          xmlns:lnk="https://causeway.apache.org/applib/layout/links"
+          xmlns:bs3="https://causeway.apache.org/applib/layout/grid/bootstrap3">
   <bs3:row>
     <bs3:col span="12" unreferencedActions="true">
       <cpt:domainObject bookmarking="AS_ROOT">
